# jpeg_compression

./: CMakeLists.txt  script.sh
files/imagebaseraw/: arctichare.raw  frymire.raw  girl.raw  lena.raw  monarch.raw  pool.raw  sails.raw  serrano.raw  tulips.raw  watch.raw
files/jpeg-source/: jpegdec.cpp  jpegenc.cpp
src/: coder.cpp  decoder.cpp  lib.h
tmp/: airplane30.jpg.coded  airplane80.jpg.coded  arctichare30.jpg.coded  arctichare80.jpg.coded  baboon30.jpg.coded  baboon80.jpg.coded  cat30.jpg.coded  cat80.jpg.coded  fruits30.jpg.coded  fruits80.jpg.coded  frymire30.jpg.coded  frymire80.jpg.coded  girl30.jpg.coded  girl80.jpg.coded  lena30.jpg.coded  lena80.jpg.coded  monarch30.jpg.coded  monarch80.jpg.coded  peppers30.jpg.coded  peppers80.jpg.coded  pool30.jpg.coded  pool80.jpg.coded  sails30.jpg.coded  sails80.jpg.coded  serrano30.jpg.coded  serrano80.jpg.coded  tulips30.jpg.coded  tulips80.jpg.coded  watch30.jpg.coded  watch80.jpg.coded
